<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xqbase</groupId>
	<artifactId>xqbase-util-jdk17</artifactId>
	<version>0.2.2</version>
	<packaging>jar</packaging>
	<name>XQBase Util</name>
	<description>Reusable Java components for www.xqbase.com</description>
	<url>https://github.com/xqbase/util</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>xqbase.com Development Team</name>
			<email>webmaster@xqbase.com</email>
			<organization>xqbase.com</organization>
			<organizationUrl>http://www.xqbase.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:xqbase/util.git</connection>
		<developerConnection>scm:git:git@github.com:xqbase/util.git</developerConnection>
		<url>https://github.com/xqbase/util.git</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-servlet-api</artifactId>
			<version>8.0.12</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>